Rewrite algorithm. It works faster now.